fix overflow

--- a/src/ducks/Watchlists/Widgets/Table/AssetsTable.module.scss
+++ b/src/ducks/Watchlists/Widgets/Table/AssetsTable.module.scss
@@ -70,6 +70,7 @@
 
   &__tooltip {
     white-space: nowrap;
+    z-index: 3;
   }
 
   &:hover {
